# OurWebsite

./: .gitignore  environment.yml  index.html  main.py  render.py  requirements.txt  scratch_functions.ipynb  server.py  todo.txt  update_group_statistics.py  utils.py
consulting_analysis_results/: .gitignore  README.md  consulting_repo.py  pyproject.toml  test_consulting_repo.py
consulting_analysis_results/data/: consulting_stats.xlsx
consulting_analysis_results/scratch/: consulting_result_repo_explore.ipynb  put_excel_data_into_repo.ipynb
consulting_analysis_results/src/: __init__.py  sciebo_downloader.py
consulting_analysis_results/src/results_repo/: __init__.py  consulting_repo.py
consulting_analysis_results/tests/: test_consulting_repo.py
group_data/: data.dvc  pyproject.toml  requirements.txt  schema.py
group_data/.dvc/: config
group_data/scratch/: update_all.ipynb
group_data/scratch/temp/: abc_000_2024-05-06.yaml
group_data/scripts/: validate_db.py
group_data/src/ibots_db/: __init__.py  funs.py  schema.py  updates.py  updates__test.py
ssg/: app.py  (+14 more)
static_site_generator/: README.md  pyproject.toml
static_site_generator/scripts/: generate_project.py  run_dev_server.py
static_site_generator/src/ssg/: __init__.py  api.py  config.py  renderer.py  server.py  utils.py  vendor_patches.py
website/: .dvcignore  .gitignore  README.md  config.yaml  data.dvc  environment.yml  get_data.py  main.py  pyproject.toml  requirements.txt  theme.7z.dvc  theme.dvc  tryout.py
website/.dvc/: config
website/data/: .gitignore  group.yaml.dvc  teaching_materials.yaml  teaching_materials.yaml.dvc  test.txt.dvc  testimonials.yaml  testimonials.yaml.dvc
website/data/orgs/: .gitignore  partners.yaml.dvc  sponsors.yaml.dvc
website/data/people/: .gitignore  anoushka.yaml  anoushka.yaml.dvc  ben2.yaml  ben2.yaml.dvc  ben_h.yaml  ben_h.yaml.dvc  mohammad.yaml  mohammad.yaml.dvc  nick.yaml  nick.yaml.dvc  ogulcan.yaml  ogulcan.yaml.dvc  oliver.yaml  oliver.yaml.dvc  sangeetha.yaml  sangeetha.yaml.dvc  thomas.yaml  thomas.yaml.dvc
website/docs/: Website Plan.docx  website templates.md
website/output/: about_us.html  consulting.html  contact_us.html  index.html  learning_resources.html  networking.html
website/output/events/: arduino.html  calcium_imaging.html  data_management.html  index.html  intro2matlab.html  intro2py.html  intro2py2.html  mne_python.html  neuroscience_projects.html  upcoming_workshop.html
website/output/workshops/: intro2matlab.html
website/pages/: _index.md  about_us.md  consulting.md  events.md  index.md  learning_resources.md  networking.md  template.html
website/pages/404/: 404.html  _render.yaml  template.html
website/remote_files/: data.dvc
website/scratch/: get_results.ipynb
website/shared/: README.md
website/site/: navbar.yaml
website/ssg/: filters.py  pages.py  renderer.py  server.py
website/templates/: about_rse.html  about_us.html  blog-list-no-sidebar.html  consulting.html  contacts.html  event.html  event_series.html  events.html  index.html  learning_resources.html  networking.html  partners.html  terms_and_conditions.html  workshop.html  workshops.html
website/themes/: .gitignore  Silicon.dvc
(+421 files in other folders)
