[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibots-results-repo"
version = "0.0.5"
authors = [
  { name="Sangeetha Nandakumar", email="sangeethanandakumar0694@gmail.com" },
  { name="Nicholas A. Del Grosso", email="delgrosso.nick@gmail.com" }
]
description = "Repository for analysis results for the iBOTS group (currently consulting analysis)"
readme = "README.md"
requires-python = ">=3.12"
classifiers = []
dependencies = [
  "pydantic>=2.7", "fsspec"
]

[project.optional-dependencies]
dev = ["pandas", "openpyxl", "pytest"]
sciebo = ["webdav4", ]
