[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibots-db"  
description = "Code for validating and loading the group db"
version = "0.0.1"
dependencies = [
    "ibots-yaml-dir-parser",
    "pydantic[email]>=2.0"
]
requires-python = ">= 3.11"
authors = [
  {name = "Nicholas A. Del Grosso", email = "delgrosso.nick@gmail.com"},
  {name = "Sangeetha Nandakumar", email = "sangeethanandakumar0694@gmail.com"},
]
readme = "README.md"