[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibots-static-site-generator"
description = "A site builder in python for the ibots website."
version = "0.0.1"
dependencies = [
  "livereload",
  "jinja2",
  "markdown2",
  "PyYAML",
  "Pillow",
  "dvc",
  "dvc_webdav>=3.0"
]
requires-python = ">= 3.12"
authors = [
  {name = "Nicholas A. Del Grosso", email = "delgrosso.nick@gmail.com"},
  {name = "Sangeetha Nandakumar", email = "sangeetha.nandakumar@gmail.com"},
]
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest", "ipdb"]